--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -112,6 +112,89 @@ body {
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
 }
+
+#stickyMenu {
+  position: fixed;
+  top: 16em;
+  left: 0;
+  -webkit-transform: translate(-500px, 0);
+  transform(-500px, 0);
+  transition: transform 0.5s ease;
+  right: 0;
+  padding: 1.5em 0.8em;
+  font-size: 0.75em;
+  min-height: 370px;
+  height: 30%;
+  color: #494e37;
+  width: 200px;
+  border: solid 1px #E0E6E3;
+  margin-left: 4em;
+  border-radius: 8px;
+  z-index: 11;
+  background-color: #FFF;
+  overflow: auto;
+  transition: all 500ms ease-in;
+}
+#stickyMenu .title {
+  color: #5b5e61;
+  font-weight: bold;
+}
+#stickyMenu ul {
+  padding:0;
+  margin:0;
+  list-style-type:none;
+}
+#stickyMenu li {
+  margin-bottom:6px;
+  cursor:pointer;
+}
+#stickyMenu li:hover {
+  color: #337ab7;
+}
+#stickyMenu.sticky-show {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+#stickyMenu::-webkit-scrollbar, div.home--item-container::-webkit-scrollbar, div.modal.fade::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+a.open, a.back {
+  position: fixed;
+  left: 1em;
+  top: 12.3em;
+  z-index: 100;
+  cursor: pointer;
+  display: none;
+}
+a.open {
+  top: 14em;
+}
+div.left-panel {
+  position:fixed;
+  padding: 10px;
+  top: 0;
+  left: 0;
+  height:100%;
+  width:50px;
+  background:#d7dee6;
+  transition: width ease .5s;
+  z-index: -1;
+  display: none;
+}
+
+body.open-nav .left-panel {
+    width:270px;
+}
+div.right-panel {
+  position:relative;
+  margin-left:25px;
+  transition:margin-left ease .5s;
+}
+
+body.open-nav .right-panel {
+    margin-left:245px;
+}
 #adminTable {
   min-height: 280px;
   transition: all 0.5s ease-in;
@@ -188,8 +271,6 @@ div.orglist-selector div.org-container label.org-label {
 .access-button {
     opacity: 1;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-    /*border-color: rgb(221, 221, 221);
-    background-color: rgb(52, 152, 219);*/
     border-color: @sectionBorderColor;
     background-color: @btnColor;
     background-image: none;
@@ -208,7 +289,6 @@ div.orglist-selector div.org-container label.org-label {
     text-align: center;
     width: 140px;
     height: 32px;
-    /*transform: rotate(0deg) translate(87px, 302px) rotate(0deg);*/
 }
 
 .access-button:hover {
@@ -247,14 +327,12 @@ div.orglist-selector div.org-container label.org-label {
 #indexContainer {
 padding: 1.8em 2em;
 position: absolute;
-/*-webkit-transform: translate(-1000px, 0);
-transform(-1000px, 0);*/
 display: none;
 -webkit-transform: translate(0, -200px);
 transform: translate(0, -200px);
 transition: all 0.5s ease;
 z-index:9;
-width:25%;
+width:50%;
 min-width:200px;
 max-width:100%;
 border-radius: 4px;
@@ -264,8 +342,12 @@ font-size: 0.85em;
 -webkit-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 -moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
-
 }
+
+#indexContainer li {
+  cursor: pointer;
+}
+
 #indexContainer.open {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
@@ -273,19 +355,19 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 }
 
 #indexNavBar {
+  display: none;
   width: 100%;
   max-width: 100%;
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.3em 0.25em;
-  /*background-image: linear-gradient(
-      to right,
-      #FFF, rgba(173, 193, 197, 0.16), rgba(173, 193, 197, 0.26)
-  );*/
-  /*background-image: linear-gradient( to right, #ffffff, rgba(183, 193, 195, 0.16), rgba(186, 190, 191, 0.18) );*/
+  padding: 0.5em 0.2em 0.7em 0.2em;
   background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
   vertical-align: center;
+
+  span.index-list {
+    display: block;
+  }
 
   span.glyphicon {
     cursor: pointer;
@@ -303,8 +385,6 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     border-radius: 4px;
-    /*position: relative;
-    top: 2px;*/
     margin-left: -4px;
     display: inline-block;
   }
@@ -344,11 +424,6 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     position: relative;
     top: 1.7px;
     }
-  }
-
-  .link-xs {
-    margin-left: 8px;
-    display: none;
   }
 
 }
@@ -1209,7 +1284,10 @@ div.noOrg-container {
 .flex div {
   margin: 0.5em 1.7em 0.5em 0.1em;
 }
-
+#phone, #email {
+  width: 300px;
+  max-width: 100%;
+}
 .pagination {
   font-size: 0.93em;
 }
@@ -1512,15 +1590,8 @@ div.org-container input[type="checkbox"] {
   }
 
   #indexNavBar {
+    display: block;
     max-width: 100%;
-    .link-xs {
-      display: inline-block;
-      font-size: 1em;
-      margin-top: -1px;
-    }
-    span.link {
-      display: none;
-    }
     span.glyphicon {
       margin-left: -2px;
     }
@@ -1611,6 +1682,7 @@ div.org-container input[type="checkbox"] {
     top: 4px;
   }
   .profile-header, #indexNavBar {
+    display: none;
     width: 100%;
     max-width: 100%;
   }
@@ -1705,6 +1777,14 @@ div.org-container input[type="checkbox"] {
   }
   .tnth-splash-bottom-link {
     font-size: 24px;
+  }
+}
+@media (min-width: 797px) {
+  #indexNavBar, #indexNavBar span.index-list {
+    display: none;
+  }
+  div.left-panel, a.back, a.open {
+    display: block;
   }
 }
 @media (min-width: 991px) {
@@ -1826,7 +1906,11 @@ div.org-container input[type="checkbox"] {
     }
   }
 }
-
+@media (max-width: 1029px) {
+  div.right-panel {
+    margin-left: 45px;
+  }
+}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1835,8 +1919,6 @@ div.org-container input[type="checkbox"] {
     display: none;
   }
 }
-
-
 @media (min-width: 1200px) {
 
   #fullSizeContainer {
