--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -65,6 +65,93 @@ body {
   height: 71px;
 }
 
+#stickyMenu {
+  position: fixed;
+  top: 16em;
+  left: 0;
+  -webkit-transform: translate(-500px, 0);
+  transform(-500px, 0);
+  transition: transform 0.5s ease;
+  right: 0;
+  padding: 1.5em 0.8em;
+  font-size: 0.75em;
+  min-height: 370px;
+  height: 55%;
+  color: #4f5256;
+  width: 200px;
+  border: solid 1px #E0E6E3;
+  margin-left: 4em;
+  border-radius: 8px;
+  z-index: 11;
+  background-color: #FFF;
+  overflow: auto;
+  transition: all 500ms ease-in;
+}
+#stickyMenu .title {
+  color: #5b5e61;
+  font-weight: bold;
+}
+#stickyMenu ul {
+  padding:0;
+  margin:0;
+  list-style-type:none;
+}
+#stickyMenu li {
+  margin-bottom:6px;
+  cursor:pointer;
+}
+#stickyMenu li:hover {
+  color: #337ab7;
+}
+#stickyMenu.sticky-show {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+#stickyMenu::-webkit-scrollbar, div.home--item-container::-webkit-scrollbar, div.modal.fade::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+a.open, a.back {
+  position: fixed;
+  left: 1em;
+  top: 12.3em;
+  z-index: 100;
+  cursor: pointer;
+  display: none;
+}
+a.open {
+  top: 14em;
+}
+div.left-panel {
+  position:fixed;
+  padding: 10px;
+  top: 0;
+  left: 0;
+  height:100%;
+  width:50px;
+  background:#bac1ca;
+  transition: width ease .5s;
+  z-index: -1;
+  display: none;
+}
+
+body.open-nav .left-panel {
+    width:270px;
+}
+div.right-panel {
+  position:relative;
+  margin-left:25px;
+  transition:margin-left ease .5s;
+}
+
+body.open-nav .right-panel {
+    margin-left:245px;
+}
+
+h4.detail-title {
+  display: none;
+}
+
 a.btn {
   font-size: @baseFontSize;
 }
@@ -184,7 +271,6 @@ div.orglist-selector div.org-container label.org-label {
     text-align: center;
     width: 140px;
     height: 32px;
-    /*transform: rotate(0deg) translate(87px, 302px) rotate(0deg);*/
 }
 
 .access-button:hover {
@@ -242,28 +328,27 @@ font-size: 0.85em;
 -moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 }
-
 #indexContainer.open {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   display: block;
 }
-
-
+#indexContainer li {
+  cursor: pointer;
+}
 #indexNavBar {
   width: 100%;
   max-width: 100%;
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.3em 0.25em;
-  /*background-image: linear-gradient(
-      to right,
-      #FFF, rgba(173, 193, 197, 0.16), rgba(173, 193, 197, 0.26)
-  );*/
-  /*background-image: linear-gradient( to right, #ffffff, rgba(183, 193, 195, 0.16), rgba(186, 190, 191, 0.18) );*/
+  padding: 0.5em 0.2em 0.7em 0.2em;
   background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
   vertical-align: center;
+
+  span.index-list {
+    display: block;
+  }
 
   span.glyphicon {
     cursor: pointer;
@@ -281,8 +366,6 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     border-radius: 4px;
-    /*position: relative;
-    top: 2px;*/
     margin-left: -4px;
     display: inline-block;
   }
@@ -322,12 +405,6 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     top: 1.7px;
     }
   }
-
-  .link-xs {
-    margin-left: 8px;
-    display: none;
-  }
-
 }
 
 #patientList #_downloadLink {
@@ -1162,7 +1239,10 @@ t
 .flex div {
   margin: 0.5em 1.2em 0.5em 0.1em;
 }
-
+#phone,#email {
+  width: 300px;
+  max-width: 100%;
+}
 .pagination {
   font-size: 0.93em;
 }
@@ -1470,15 +1550,8 @@ div.org-container input[type="checkbox"] {
   }
 
   #indexNavBar {
+    padding-top: 0.4em;
     max-width: 100%;
-    .link-xs {
-      display: inline-block;
-      font-size: 1em;
-      margin-top: -1px;
-    }
-    span.link {
-      display: none;
-    }
     span.glyphicon {
       margin-left: -2px;
     }
@@ -1676,6 +1749,14 @@ div.org-container input[type="checkbox"] {
     font-size: 24px;
   }
 }
+@media (min-width: 797px) {
+  #indexNavBar span.index-list {
+    display: none;
+  }
+  div.left-panel, a.back, a.open {
+    display: block;
+  }
+}
 @media (min-width: 991px) {
   #mainNav {
     height: 135px;
@@ -1774,7 +1855,11 @@ div.org-container input[type="checkbox"] {
     }
   }
 }
-
+@media (max-width: 1029px) {
+  div.right-panel {
+    margin-left: 45px;
+  }
+}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
