fix tool tip text for sticky menu icon

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -11,7 +11,7 @@
 {% else %}
 {{ back_link(PORTAL, _('Home')) }}
 {% endif %}
-<a class="open" href="#"><span class="glyphicon index-list glyphicon glyphicon-list-alt" data-toggle="tooltip" data-placement="bottom" title="index list"></span></a>
+<a class="open" href="#"><span class="glyphicon index-list glyphicon glyphicon-list-alt" data-toggle="tooltip" data-placement="bottom" title="show/hide index list"></span></a>
 <div class="left-panel"></div>
 <div class="right-panel">
 <div class="flex">
